force-app/main/default/objects/JWTBearerCM__mdt/JWTBearerCM__mdt.object-meta.xml
<CustomObject>
    <label>JWTBearerCM</label>
    <pluralLabel>JWTBearerCMs</pluralLabel>
</CustomObject>