force-app/main/default/objects/JWTBearerCM__mdt/fields/Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Cert_Name__c</fullName>
    <label>Cert Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>