force-app/main/default/objects/JWTBearerCM__mdt/fields/Default_User__c.field-meta.xml
<CustomField>
    <fullName>Default_User__c</fullName>
    <label>Default User</label>
    <length>250</length>
    <type>Text</type>
</CustomField>