force-app/main/default/objects/JWTBearerCM__mdt/fields/Login_Url__c.field-meta.xml
<CustomField>
    <fullName>Login_Url__c</fullName>
    <label>Login Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>