force-app/main/default/objects/JWTBearerCM__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Cert_Name__c</columns>
    <columns>Client_Id__c</columns>
    <columns>Default_User__c</columns>
    <columns>Login_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>